--- a/v25.html
+++ b/v25.html
@@ -29,114 +29,4 @@
         #prompt-result { width: 100%; height: 450px; background: #000; color: #fcf6ba; border: 1px solid #bf953f; padding: 35px; border-radius: 25px; font-family: 'Courier New', monospace; font-size: 15px; line-height: 1.6; }
         footer { margin-top: 100px; padding: 50px; text-align: center; border-top: 1px solid var(--border); }
         .footer-text { font-size: 10px; color: var(--text); opacity: 0.6; text-transform: uppercase; letter-spacing: 2px; }
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
-    </style>
-</head>
-<body>
-
-<nav><div class="logo-v8">V8 ELITE EDITION</div></nav>
-
-<main id="app-block">
-    <div class="glass-panel">
-        <div class="progress-header">
-            <span class="progress-label">Integridade do Sistema V8</span>
-            <span id="percent-text" style="color:#fcf6ba; font-weight:bold;">0%</span>
-        </div>
-        <div class="progress-bar-bg"><div id="bar-fill" class="progress-bar-fill"></div></div>
-
-        <label>UPLOAD DE DOCUMENTO (PDF)</label>
-        <div class="file-input-wrapper" onclick="document.getElementById('pdf-input').click()">
-            <span id="file-status" style="color:#fcf6ba; font-weight:bold;">CLIQUE PARA SUBIR O PDF DA TRIAGEM</span>
-            <input type="file" id="pdf-input" accept="application/pdf" style="display:none" onchange="processarPDF(this)">
-        </div>
-
-        <label>OBJETIVO FINAL (DESTINO)</label>
-        <input type="text" id="destino" oninput="monitorar()" placeholder="Ex: Triagem Jurídica Completa...">
-
-        <label>DADOS EXTRAÍDOS / FATOS BRUTOS</label>
-        <textarea id="fatos" rows="8" oninput="monitorar()" placeholder="O texto aparecerá aqui..."></textarea>
-
-        <button id="btn-main" class="btn-prime" onclick="processar()">ATIVAR ENGENHARIA SUPREMA</button>
-    </div>
-
-    <div id="output-zone">
-        <label>💎 COMANDO V8 ELITE GERADO:</label>
-        <textarea id="prompt-result" readonly></textarea>
-        <button class="btn-prime" style="margin-top:20px; padding:20px;" onclick="copiar()">COPIAR COMANDO</button>
-    </div>
-</main>
-
-<footer>
-    <div class="footer-text">
-        <strong>CÁSSIA PROMPT ® | TECNOLOGIA V8</strong><br>
-        LICENCIADO PARA: <span id="user-display" style="color:#bf953f; font-weight:bold;">VERIFICANDO...</span><br>
-        A RESPONSABILIDADE É DE QUEM ESTÁ USANDO.
-    </div>
-</footer>
-
-<script>
-    const LICENCAS = {
-        "TkFUQUxJ": "NATALIA",
-        "SEVMRU4=": "HELEN CRISTINA",
-        "Y2Fzc2lh": "CÁSSIA"
-    };
-
-    const urlParams = new URLSearchParams(window.location.search);
-    const idUser = urlParams.get('id');
-    const usuarioAtivo = LICENCAS[idUser];
-
-    if (!usuarioAtivo) {
-        document.getElementById('app-block').innerHTML = `<h1 style='color:#bf953f; text-align:center; padding-top:100px;'>ACESSO REVOGADO</h1>`;
-        document.getElementById('user-display').innerText = "BLOQUEADO";
-    } else {
-        document.getElementById('user-display').innerText = usuarioAtivo;
-    }
-
-    async function processarPDF(input) {
-        const status = document.getElementById('file-status');
-        const fatos = document.getElementById('fatos');
-        const file = input.files[0];
-        if (!file) return;
-        status.innerText = "LENDO PDF...";
-        const reader = new FileReader();
-        reader.onload = async function() {
-            const typedarray = new Uint8Array(this.result);
-            const pdf = await pdfjsLib.getDocument(typedarray).promise;
-            let textoFull = "";
-            for (let i = 1; i <= pdf.numPages; i++) {
-                const page = await pdf.getPage(i);
-                const content = await page.getTextContent();
-                textoFull += content.items.map(item => item.str).join(" ") + "\n";
-            }
-            fatos.value = textoFull;
-            status.innerText = "PDF CARREGADO COM SUCESSO! ✅";
-            monitorar();
-        };
-        reader.readAsArrayBuffer(file);
-    }
-
-    function monitorar() {
-        const d = document.getElementById('destino').value.length;
-        const f = document.getElementById('fatos').value.length;
-        let progresso = Math.min(100, ((d / 10) * 30) + ((f / 100) * 70));
-        document.getElementById('bar-fill').style.width = progresso + "%";
-        document.getElementById('percent-text').innerText = Math.round(progresso) + "%";
-    }
-
-    function processar() {
-        const d = document.getElementById('destino').value;
-        const f = document.getElementById('fatos').value;
-        document.getElementById('prompt-result').value = `### [V8 ELITE EDITION] ###\n\nOBJETIVO: ${d}\n\nDADOS EXTRAÍDOS:\n${f}\n\nPROTOCOLO: Redija com máximo rigor técnico e jurídico.`;
-        document.getElementById('output-zone').style.display = 'block';
-        window.scrollTo({top: document.body.scrollHeight, behavior: 'smooth'});
-    }
-
-    function copiar() {
-        const text = document.getElementById('prompt-result');
-        text.select();
-        document.execCommand('copy');
-        alert("💎 Copiado!");
-    }
-</script>
-</body>
-</html>
+        @keyframes fadeIn {
