--- a/v25.html
+++ b/v25.html
@@ -6,27 +6,160 @@
     <title>V8 ELITE EDITION | CÁSSIA PROMPT</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
     <style>
-        :root { 
-            --bg: #050505; --card: #0a0a0a; --text: #ffffff; 
-            --border: #1a1a1a; 
+        :root {
+            --bg: #050505; --card: #0a0a0a; --text: #ffffff; --border: #1a1a1a;
             --gold: linear-gradient(135deg, #bf953f 0%, #fcf6ba 45%, #b38728 70%, #fbf5b7 100%);
-            --glow: 0 0 35px rgba(191, 149, 63, 0.15);
+            --glow: 0 0 25px rgba(191, 149, 63, 0.15);
         }
-        body { margin: 0; background: var(--bg); color: var(--text); font-family: 'Inter', sans-serif; overflow-x: hidden; }
-        nav { background: rgba(0,0,0,0.95); backdrop-filter: blur(15px); padding: 25px 40px; border-bottom: 1px solid #bf953f; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; }
-        .logo-v8 { font-size: 26px; font-weight: 900; letter-spacing: 7px; background: var(--gold); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-transform: uppercase; }
-        main { padding: 50px 20px; display: flex; flex-direction: column; align-items: center; min-height: 80vh; }
-        .glass-panel { background: var(--card); width: 100%; max-width: 850px; border-radius: 35px; border: 1px solid var(--border); padding: 50px; box-sizing: border-box; box-shadow: var(--glow); position: relative; }
-        .progress-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; }
-        .progress-label { font-size: 11px; font-weight: 900; color: #bf953f; text-transform: uppercase; letter-spacing: 2px; }
-        .progress-bar-bg { width: 100%; height: 10px; background: #111; border-radius: 25px; overflow: hidden; margin-bottom: 30px; border: 1px solid #222; }
-        .progress-bar-fill { width: 0%; height: 100%; background: var(--gold); transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1); }
-        label { font-size: 11px; font-weight: 800; color: #bf953f; text-transform: uppercase; display: block; margin-bottom: 15px; letter-spacing: 2px; }
-        textarea, input { width: 100%; background: rgba(255,255,255,0.03); border: 1px solid var(--border); padding: 22px; border-radius: 18px; color: var(--text); font-size: 16px; outline: none; margin-bottom: 30px; box-sizing: border-box; }
-        .file-input-wrapper { border: 2px dashed #bf953f; padding: 30px; border-radius: 18px; text-align: center; margin-bottom: 30px; cursor: pointer; transition: 0.3s; }
-        .btn-prime { width: 100%; background: var(--gold); color: #000; border: none; padding: 30px; border-radius: 20px; font-weight: 900; cursor: pointer; text-transform: uppercase; letter-spacing: 6px; font-size: 17px; }
-        #output-zone { display: none; margin-top: 60px; width: 100%; max-width: 850px; animation: fadeIn 0.8s ease; }
-        #prompt-result { width: 100%; height: 450px; background: #000; color: #fcf6ba; border: 1px solid #bf953f; padding: 35px; border-radius: 25px; font-family: 'Courier New', monospace; font-size: 15px; line-height: 1.6; }
-        footer { margin-top: 100px; padding: 50px; text-align: center; border-top: 1px solid var(--border); }
-        .footer-text { font-size: 10px; color: var(--text); opacity: 0.6; text-transform: uppercase; letter-spacing: 2px; }
-        @keyframes fadeIn {
+        .light-mode {
+            --bg: #f4f4f4; --card: #ffffff; --text: #1a1a1a; --border: #d1d1d1;
+            --glow: 0 5px 15px rgba(0,0,0,0.05);
+        }
+        body { margin: 0; background: var(--bg); color: var(--text); font-family: 'Inter', sans-serif; transition: 0.4s; }
+        
+        nav { background: rgba(0,0,0,0.02); backdrop-filter: blur(10px); padding: 20px 40px; border-bottom: 1px solid var(--border); display: flex; justify-content: space-between; align-items: center; }
+        .logo-v8 { font-size: 20px; font-weight: 900; letter-spacing: 5px; background: var(--gold); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-transform: uppercase; }
+
+        .controls { display: flex; gap: 15px; }
+        .btn-tool { background: none; border: 1px solid var(--border); color: var(--text); padding: 8px 15px; border-radius: 8px; cursor: pointer; font-size: 10px; text-transform: uppercase; letter-spacing: 1px; transition: 0.3s; }
+        .btn-tool:hover { border-color: #bf953f; color: #bf953f; }
+
+        main { padding: 40px 20px; display: flex; flex-direction: column; align-items: center; }
+        .glass-panel { background: var(--card); width: 100%; max-width: 800px; border-radius: 25px; border: 1px solid var(--border); padding: 40px; box-shadow: var(--glow); position: relative; }
+
+        .integrity-box { margin-bottom: 30px; }
+        .integrity-header { display: flex; justify-content: space-between; font-size: 10px; font-weight: 800; color: #bf953f; text-transform: uppercase; margin-bottom: 8px; letter-spacing: 1px; }
+        .bar-bg { width: 100%; height: 4px; background: rgba(191,149,63,0.1); border-radius: 10px; overflow: hidden; }
+        .bar-fill { width: 0%; height: 100%; background: var(--gold); transition: 0.6s; }
+
+        .pdf-discreto { border: 1px dashed var(--border); padding: 15px; border-radius: 12px; text-align: center; margin-bottom: 25px; cursor: pointer; font-size: 11px; color: #bf953f; transition: 0.3s; }
+        .pdf-discreto:hover { background: rgba(191,149,63,0.05); border-color: #bf953f; }
+
+        label { font-size: 10px; font-weight: 700; opacity: 0.6; text-transform: uppercase; display: block; margin-bottom: 10px; letter-spacing: 1.5px; }
+        textarea, input { width: 100%; background: transparent; border: 1px solid var(--border); padding: 18px; border-radius: 12px; color: var(--text); font-size: 15px; margin-bottom: 25px; box-sizing: border-box; outline: none; transition: 0.3s; }
+        textarea:focus, input:focus { border-color: #bf953f; }
+
+        .btn-gerar { width: 100%; background: var(--gold); color: #000; border: none; padding: 22px; border-radius: 15px; font-weight: 900; cursor: pointer; text-transform: uppercase; letter-spacing: 4px; font-size: 14px; box-shadow: 0 10px 20px rgba(191,149,63,0.15); }
+        
+        #output-zone { display: none; margin-top: 40px; width: 100%; max-width: 800px; }
+        #prompt-result { width: 100%; height: 350px; background: rgba(0,0,0,0.05); color: var(--text); border: 1px solid var(--border); padding: 25px; border-radius: 15px; font-family: 'Courier New', monospace; font-size: 14px; }
+
+        footer { margin-top: 60px; padding: 30px; text-align: center; font-size: 9px; opacity: 0.4; letter-spacing: 2px; text-transform: uppercase; line-height: 2; }
+    </style>
+</head>
+<body id="body-tag">
+
+<nav>
+    <div class="logo-v8">V8 ELITE EDITION</div>
+    <div class="controls">
+        <button class="btn-tool" onclick="apagarTudo()">Apagar Tudo</button>
+        <button class="btn-tool" onclick="toggleMode()">Modo Claro/Escuro</button>
+    </div>
+</nav>
+
+<main id="app-block">
+    <div class="glass-panel">
+        <div class="integrity-box">
+            <div class="integrity-header"><span>Integridade do Sistema</span><span id="pct">0%</span></div>
+            <div class="bar-bg"><div id="fill" class="bar-fill"></div></div>
+        </div>
+
+        <div class="pdf-discreto" onclick="document.getElementById('pdf-file').click()">
+            <span id="pdf-status">📎 ANEXAR PDF (OPCIONAL)</span>
+            <input type="file" id="pdf-file" accept="application/pdf" style="display:none" onchange="lerPDF(this)">
+        </div>
+
+        <label>Objetivo</label>
+        <input type="text" id="destino" oninput="monitorar()" placeholder="Qual o resultado final esperado?">
+
+        <label>Fatos & Dados</label>
+        <textarea id="fatos" rows="6" oninput="monitorar()" placeholder="Insira os dados brutos ou anexe um PDF..."></textarea>
+
+        <button class="btn-gerar" onclick="gerar()">Gerar Supremo Prompt</button>
+    </div>
+
+    <div id="output-zone">
+        <textarea id="prompt-result" readonly></textarea>
+        <button class="btn-tool" style="width:100%; margin-top:15px; padding:15px" onclick="copiar()">Copiar Comando de Elite</button>
+    </div>
+</main>
+
+<footer>
+    CÁSSIA PROMPT ® | TECNOLOGIA V8 ELITE<br>
+    LICENCIADO PARA: <span id="user-display" style="color:#bf953f">...</span><br>
+    A RESPONSABILIDADE É DO USUÁRIO. O PROGRAMA APENAS GERA O PROMPT.
+</footer>
+
+<script>
+    // SISTEMA DE ACESSO (HELEN E NATALIA LIBERADAS)
+    const ACESSOS = {
+        "TkFUQUxJ": "NATALIA",
+        "Helen_cristina": "HELEN CRISTINA",
+        "TkfVQUxK": "NATALIA",
+        "cassia": "CÁSSIA"
+    };
+
+    const urlParams = new URLSearchParams(window.location.search);
+    const id = urlParams.get('id');
+    const user = ACESSOS[id];
+
+    if (!user) {
+        document.getElementById('app-block').innerHTML = "<h2 style='color:#bf953f; text-align:center; margin-top:100px;'>ACESSO REVOGADO</h2>";
+    } else {
+        document.getElementById('user-display').innerText = user;
+    }
+
+    // MODO CLARO/ESCURO
+    function toggleMode() { document.getElementById('body-tag').classList.toggle('light-mode'); }
+
+    // APAGAR TUDO
+    function apagarTudo() {
+        document.getElementById('destino').value = "";
+        document.getElementById('fatos').value = "";
+        document.getElementById('pdf-status').innerText = "📎 ANEXAR PDF (OPCIONAL)";
+        monitorar();
+    }
+
+    // LEITOR DE PDF
+    async function lerPDF(input) {
+        const file = input.files[0];
+        if(!file) return;
+        document.getElementById('pdf-status').innerText = "PROCESSANDO...";
+        const reader = new FileReader();
+        reader.onload = async function() {
+            const typedarray = new Uint8Array(this.result);
+            const pdf = await pdfjsLib.getDocument(typedarray).promise;
+            let text = "";
+            for(let i=1; i<=pdf.numPages; i++) {
+                const page = await pdf.getPage(i);
+                const content = await page.getTextContent();
+                text += content.items.map(s => s.str).join(" ") + "\n";
+            }
+            document.getElementById('fatos').value = text;
+            document.getElementById('pdf-status').innerText = "PDF CARREGADO ✅";
+            monitorar();
+        };
+        reader.readAsArrayBuffer(file);
+    }
+
+    function monitorar() {
+        let p = Math.min(100, (document.getElementById('destino').value.length * 2) + (document.getElementById('fatos').value.length / 20));
+        document.getElementById('fill').style.width = p + "%";
+        document.getElementById('pct').innerText = Math.round(p) + "%";
+    }
+
+    function gerar() {
+        const d = document.getElementById('destino').value;
+        const f = document.getElementById('fatos').value;
+        document.getElementById('prompt-result').value = `### [SISTEMA V8 ELITE] ###\n\nOBJETIVO: ${d}\n\nCONTEXTO: ${f}`;
+        document.getElementById('output-zone').style.display = 'block';
+    }
+
+    function copiar() {
+        document.getElementById('prompt-result').select();
+        document.execCommand('copy');
+        alert("💎 Comando de Elite Copiado!");
+    }
+</script>
+</body>
+</html>
